add adaptive promo section

--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
             </div>
         </section>
     </header>
-    <!-- <section class="promo">
+    <section class="promo">
         <div class="container">
             <div class="promo__wrapper">
                 <div class="promo__left">
@@ -119,19 +119,25 @@
                 </div>
                 <div class="promo__right">
                     <div class="promo__desr">
-                        <h2 class="title_fz20">Автоматизовано, просто і доступно кожному. Почніть створювати свої круті цифрові продукти прямо зараз.</h2>
+                        <h2 class="promo__subtitle title_fz20">Автоматизовано, просто і доступно кожному. Почніть створювати свої круті цифрові продукти прямо зараз.</h2>
                         </div>
-                    <div>
-                    <button class="promo_btn btn btn_arrow">Підключитися →</button>
-                    <div class="promo__connect">або <a href="#">Зв’язатися з відділом продаж</a></div>
+                    <div class="promo__connect">
+                    <button class="promo__btn btn btn_arrow">Підключитися →</button>
+                    <div class="promo__connect-link">або <a href="#">Зв’язатися з відділом продаж</a></div>
                     </div>
                 </div>
             </div>
         </div>    
         <div class="promo__lines">
-            <img src="img/header/Lines.jpg" alt="lines">
+            <img src="img/header/Lines.png" alt="lines">
        </div>
-    </section> -->
+       <div class="promo__lines-tab">
+            <img src="img/header/Lines_tab.png" alt="linestab">
+       </div>
+       <div class="promo__lines-mob">
+        <img src="img/header/Lines_mob.svg" alt="linesmob">
+        </div>
+    </section>
     <!-- <section class="first">
         <div class="container">
             <div class="first__wrapper">
