add adaprive first section

--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,7 @@
         <img src="img/header/Lines_mob.svg" alt="linesmob">
         </div>
     </section>
-    <!-- <section class="first">
+    <section class="first">
         <div class="container">
             <div class="first__wrapper">
                 <div class="first__left">
@@ -153,7 +153,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- <section class="products">
         <div class="container">
