add adaptive products section

--- a/src/index.html
+++ b/src/index.html
@@ -155,13 +155,16 @@
         </div>
     </section>
 
-    <!-- <section class="products">
+    <section class="products">
         <div class="container">
             <div class="products__first">
                 <h2 class="products__first_title title_fz46">Cloud Compute</h2>
                 <div class="products__first_subtitle title_fz20">Миттєва готовність, гнучкість та автоматизація за допомогою хмарного API</div>
                 <div class="products__first_img">
                     <img src="img/products/cloud_illustration.svg" alt="clouds">
+                </div>
+                <div class="products__first_img-tab">
+                    <img src="img/products/ill_cloud-compute.svg" alt="clouds_tab">
                 </div>
             </div>
 
@@ -191,6 +194,9 @@
                 <div class="products__second_bg">
                     <img src="img/products/ill_cloud-instance.svg" alt="cloud-instance">
                 </div>  
+                <div class="products__second_bg_mob">
+                    <img src="img/products/cloud-instance_mob.svg" alt="cloud-instance-mob">
+                </div>  
             </div>
 
             <div class="products__third">
@@ -216,8 +222,11 @@
                 </div>
                 <button class="products__third_btn btn_light">Докладніше</button>
                 <div class="products__third_bg">
-                    <img src="img/products/ill_block-storage.svg" alt="cloud-instance">
+                    <img src="img/products/ill_block-storage.svg" alt="block-storage">
                 </div>   
+                <div class="products__third_bg_mob">
+                    <img src="img/products/block-storage_mob.svg" alt="block-storage-mob">
+                </div>  
             </div>
             <div class="products__fourth">
                 <div class="products__fourth_name">
@@ -245,10 +254,13 @@
                 <div class="products__fourth_bg">
                     <img src="img/products/ill_vpc.svg" alt="vpc">
                 </div>
+                <div class="products__fourth_bg_mob">
+                    <img src="img/products/VPC_mob.svg" alt="vpc-mob">
+                </div>
             </div>
             <div class="products__fifth">
                 <div class="products__fifth_name">
-                    <h2 class="produts__fifth_title title_fz46 title_fz46_black">FWaaS (Firewall)</h2>
+                    <h2 class="produts__fifth_title title_fz46 title_fz46_black">FWaaS <span>(Firewall)</span></h2>
                     <div class="products__fifth_subtitle title_fz20 title_fz20_black">Блокування не дозволеного вхідного та вихідного мережного трафіку</div>
                 </div>
                 <div class="products__fifth_wrapper">
@@ -272,6 +284,9 @@
                 <div class="products__fifth_bg">
                     <img src="img/products/ill_firewall.svg" alt="firewall">
                 </div>
+                <div class="products__fifth_bg_mob">
+                    <img src="img/products/Firewall_mob.svg" alt="firewall-mob">
+                </div>
             </div>
             <div class="products__sixth">
                 <div class="products__sixth_name">
@@ -291,9 +306,12 @@
                 <div class="products__sixth_bg">
                     <img src="img/products/ill_load-balancer.svg" alt="load-balancer">
                 </div>
+                <div class="products__sixth_bg_mob">
+                    <img src="img/products/load-balancer_mob.svg" alt="load-balancer-mob">
+                </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- <section class="interface">
         <div class="container">
