add adaptive carousel

--- a/src/index.html
+++ b/src/index.html
@@ -313,17 +313,24 @@
         </div>
     </section>
 
-    <!-- <section class="interface">
+    <section class="interface">
         <div class="container">
             <div class="interface__text">
                 <h2 class="interface__title title_fz56">Інтуїтивно зрозумілий інтерфейс.
                     Передбачуваний. Мінімалістичний.</h2>
+            
                 <div class="interface__descr">
                     <div class="title_fz20 interface__descr_one">Зручне керування хмарними сервісами та ресурсами.</div>
                     <div class="title_fz20 interface__descr_two">У докладній документації знайдуться всі необхідні покрокові посібники.</div>
                     <button class="btn btn_arrow interface__btn">Підключитися →</button>
                 </div>
             </div>
+            <div class="interface__descr_hidden">
+                <div class="title_fz20 interface__descr_one">Зручне керування хмарними сервісами та ресурсами.</div>
+                <div class="title_fz20 interface__descr_two">У докладній документації знайдуться всі необхідні покрокові посібники.</div>
+                <button class="btn btn_arrow interface__btn">Підключитися →</button>
+            </div>
+
             <div class="interface__carousel_wrapper">
                 <div class="interface__carousel">
                     <div class="interface__carousel_slides"><img src="img//3_section/slide_1.png" alt="slide_1"></div>
@@ -334,7 +341,7 @@
             </div>
 
         </div>
-    </section> -->
+    </section>
 
     <section class="document">
         <div class="container">
