fixed main menu

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
                         <div class="main-header__logo">
                             <img src="img/header/logo-white.svg" alt="logo">
                         </div>
-                        <ul class="main-header__menu">
+                        <!-- <ul class="main-header__menu">
                             <li id="products" class="main-header__menu_item main-header__menu_item-drop">
                                 <a href="#">Продукти</a>
                                 <ul class="main-header__menu_item-drop_list">
@@ -86,7 +86,31 @@
                                 <a href="#">Ціни</a></li>
                             <li class="main-header__menu_item main-header__menu_item-drop">
                                 <a href="#">Компанія</a></li>
+                        </ul> -->
+
+                        <ul class="main-header__menu">
+                            <li id="products" class="main-header__menu_item main-header__menu_item-drop">
+                                <button class="main-header__menu_button main-header__menu_button-drop">Продукти</button>
+                                <ul class="main-header__dropdown">
+                                    <li class="main-header__dropdown_item"><a class="main-header__dropdown_link" href="#">Cloud Instanse</a></li>
+                                    <li class="main-header__dropdown_item"><a class="main-header__dropdown_link" href="#">Block Storage</a></li>
+                                    <li class="main-header__dropdown_item"><a class="main-header__dropdown_link" href="#">Virtual Privat Cloud (VPC)</a></li>
+                                    <li class="main-header__dropdown_item"><a class="main-header__dropdown_link" href="#">Firewall (FWaaS)</a></li>
+                                    <li class="main-header__dropdown_item"><a class="main-header__dropdown_link" href="#">Load Balancer</a></li>
+                                    <li class="main-header__dropdown_item"><a class="main-header__dropdown_link" href="#">Ціни</a></li>
+                                </ul>
+                            </li>
+                            <li class="main-header__menu_item main-header__menu_item-drop">
+                                <button class="main-header__menu_button main-header__menu_button-drop">Рішення</button>
+                                </li>
+                            <li class="main-header__menu_item">
+                                <button class="main-header__menu_button"><a href="#">Ціни</a></button>
+                                </li>
+                            <li class="main-header__menu_item main-header__menu_item-drop">
+                                <button class="main-header__menu_button main-header__menu_button-drop">Компанія</button>
+                            </li>
                         </ul>
+
                     </div>
 
 
