add prices - 1 section

--- a/src/_header.html
+++ b/src/_header.html
@@ -16,18 +16,18 @@
         </div>
     </section>
 
-    <section class="main-header">
+    <section class="main-header main-header-white">
         <div class="container">
             <div class="main-header__wrapper">
                 <div class="main-header__left">
                     <div class="main-header__logo">
-                        <a href="#"><img src="img/header/logo-white.svg" alt="logo"></a>
+                        <a href="#"><img src="img/header/logo-black.svg" alt="logo"></a>
                     </div>
 
 
                     <ul class="main-header__menu">
                         <li id="products" class="main-header__menu_item main-header__menu_item-drop">
-                            <a href="#" class="main-header__menu_button main-header__menu_button-drop">Продукти</a>
+                            <a href="#" class="main-header__menu_button main-header__menu_button-black main-header__menu_button-drop main-header__menu_button-drop-black">Продукти</a>
                             <ul class="main-header__dropdown">
                                 <li class="main-header__dropdown_item"><a class="main-header__dropdown_link" href="#">Cloud Instanse</a></li>
                                 <li class="main-header__dropdown_item"><a class="main-header__dropdown_link" href="#">Block Storage</a></li>
@@ -38,13 +38,13 @@
                             </ul>
                         </li>
                         <li class="main-header__menu_item main-header__menu_item-drop">
-                            <a href="#" class="main-header__menu_button main-header__menu_button-drop">Рішення</a>
+                            <a href="#" class="main-header__menu_button main-header__menu_button-black main-header__menu_button-drop main-header__menu_button-drop-black">Рішення</a>
                             </li>
                         <li class="main-header__menu_item">
-                            <a href="#" class="main-header__menu_button">Ціни</a>
+                            <a href="#" class="main-header__menu_button main-header__menu_button-black">Ціни</a>
                             </li>
                         <li class="main-header__menu_item main-header__menu_item-drop">
-                            <a href="#" class="main-header__menu_button main-header__menu_button-drop">Компанія</a>
+                            <a href="#" class="main-header__menu_button main-header__menu_button-black main-header__menu_button-drop main-header__menu_button-drop-black">Компанія</a>
                         </li>
                     </ul>
 
@@ -53,12 +53,12 @@
 
                 <div class="main-header__right">
                     <div class="main-header__buttons">
-                        <button class="btn btn_blue main-header__btn main-header__btn_blue ">Вхід</button>
-                        <button class="btn main-header__btn">Підключитися</button>
+                        <button class="btn btn_white main-header__btn main-header__btn_blue ">Вхід</button>
+                        <button class="btn btn_connect main-header__btn main-header__btn">Підключитися</button>
                     </div>
                 </div>
 
-                <div class="main-header__hamburger">
+                <div class="main-header__hamburger main-header__hamburger-black">
                     <span></span>
                     <span></span>
                     <span class="tablet"></span>
