add page cloud_instance - banner

--- a/src/_footer.html
+++ b/src/_footer.html
@@ -6,6 +6,9 @@
                     <div class="footer__contacts_logo">
                         <a href="#"><img src="img/header/logo-white.svg" alt="logo"></a>
                     </div>
+                    <div class="footer__contacts_logo-mob">
+                        <a href="#"><img src="img/footer/logotype-mob.svg" alt="logo-mob"></a>
+                    </div>
                     <div class="footer__contacts_social">
                         <a href="#">
                             <img src="icons/footer/ic_twitter.svg" alt="twitter"></a>
