--- a/src/_header.html
+++ b/src/_header.html
@@ -23,6 +23,9 @@
                     <div class="main-header__logo">
                         <a href="#"><img src="img/header/logo-black.svg" alt="logo"></a>
                     </div>
+                    <div class="main-header__logo-mob">
+                        <a href="#"><img src="img/header/logotype-mob.svg" alt="logo-mob"></a>
+                    </div>
 
 
                     <ul class="main-header__menu">
