add horizontal scroll menu

--- a/src/cloud_instance.html
+++ b/src/cloud_instance.html
@@ -43,6 +43,8 @@
                     <li class="cloud__tab tab-button" data-target=".tab-3">Доповнення</li>
                     <li class="cloud__tab tab-button" data-target=".tab-4">Документація</li>
                 </ul>
+                <button class="arrow_left"><img src="icons/cloud_instance/ic_chevron-left.svg" alt="left"></button>
+                <button class="arrow_right"><img src="icons/cloud_instance/ic_chevron-right.svg" alt="right"></button>
             </div>    
         </div>  
          
