--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,9 @@
                         <div class="main-header__logo">
                             <a href="#"><img src="img/header/logo-white.svg" alt="logo"></a>
                         </div>
-    
+                        <div class="main-header__logo-mob">
+                            <a href="#"><img src="img/header/logo-white.svg" alt="logo"></a>
+                        </div>
     
                         <ul class="main-header__menu">
                             <li id="products" class="main-header__menu_item main-header__menu_item-drop">
